--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,13 @@
 *.tar.gz
 *.rar
 
+*.DS_Store
+*.mvn/wrapper/maven-wrapper.jar
+*/mvnw
+*/mvnw.cmd
+*/.mvn/wrapper/MavenWrapperDownloader.java
+*/.mvn/wrapper/maven-wrapper.properties
+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
