--- a/SoccerTournamentBackend/pom.xml
+++ b/SoccerTournamentBackend/pom.xml
@@ -17,6 +17,15 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
+			<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
