--- a/SoccerTournamentBackend/src/main/resources/application.properties
+++ b/SoccerTournamentBackend/src/main/resources/application.properties
@@ -9,3 +9,13 @@
 # 
 ## Custom H2 Console URL
 #spring.h2.console.path=/h2-console
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
+
+spring.datasource.url=jdbc:mysql://localhost:3306/soccer_db
+spring.datasource.username=root
+spring.datasource.password=abcde123!
