--- a/SoccerTournamentFrontend/package.json
+++ b/SoccerTournamentFrontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
+    "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
     "joi": "^17.4.2",
     "react": "^17.0.2",
